Refactor: Dirty check for user service